[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/smoke/explosion/explodingAnimationPlayerEntry.tres" type="Animation" id=1]
[ext_resource path="res://assets/smoke/explosion/explosion.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/sprites/muzflash.png" type="Texture" id=6]
[ext_resource path="res://entities/attacks/SniperBullet.gd" type="Script" id=12]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.541436, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.792969, 0.111511, 0.111511, 1, 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 6 )

[sub_resource type="CircleShape2D" id=3]
radius = 43.0

[node name="SniperBullet" type="RigidBody2D"]
collision_layer = 16
collision_mask = 9
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 12 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 15, 0, 30, 0 )
width = 2.0
gradient = SubResource( 1 )
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 18, 0 )
shape = SubResource( 2 )

[node name="destroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 18.5, 0 )
scale = Vector2( 0.146688, 0.150427 )
frames = ExtResource( 2 )
frame = 1

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2( 17, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = ExtResource( 1 )

[node name="MuzTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="muzSprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.75 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_SniperBullet_body_entered"]
[connection signal="timeout" from="destroyTimer" to="." method="_on_destroyTimer_timeout"]
[connection signal="timeout" from="MuzTimer" to="." method="_on_MuzTimer_timeout"]
